test/spec_vectors/load64/fail/module_42.wat
(module (memory i64 0) (func $type-address-empty (i32.load) (drop)))